<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufam.icomp.triplog.controller.NovaViagemActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_viagem_nome"
        android:hint="@string/et_nome_viagem"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_descricao"
        android:hint="@string/et_descricao"
        android:layout_weight="0.50"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:id="@+id/et_data_comeco"
            android:hint="@string/et_comeco_viagem"
            android:layout_weight=".5"
            android:onClick="showDatePickerDialog"
            android:focusable="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:id="@+id/et_data_fim"
            android:hint="@string/et_fim_viagem"
            android:layout_weight=".5"
            android:onClick="showDatePickerDialog"
            android:focusable="false"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_tipo_viagem"
        android:id="@+id/tv_tipo"
        android:layout_marginTop="25dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/rg_tipo_viagem">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_tipo_viagem_pessoal"
            android:id="@+id/rb_pessoal"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_tipo_viagem_trabalho"
            android:id="@+id/rb_negocios" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_concliur"
        android:id="@+id/bt_cadastrar_viagem"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="concluirClicado" />

</LinearLayout>
