<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufam.icomp.triplog.controller.NovaAtividadeActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:ems="10"
        android:id="@+id/et_nome_atividade"
        android:hint="@string/et_nome_atividade" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/et_data_atividade"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/et_data"
        android:onClick="setarAtividadeTempo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:editable="false"
        android:focusable="false"
        android:id="@+id/et_hora_atividade"
        android:hint="@string/et_hora"
        android:onClick="setarAtividadeTempo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textCapSentences|textMultiLine"
        android:ems="10"
        android:id="@+id/et_detalhes_atividade"
        android:hint="@string/et_descricao"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_concliur"
        android:id="@+id/button"
        android:onClick="concluirAtividade"
        android:layout_gravity="right" />
</LinearLayout>
