<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufam.icomp.triplog.controller.NovaCarteiraActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/et_nome_carteira"
        android:id="@+id/tv_nome_carteira" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_nome_carteira"
        android:hint="@string/et_nome_carteira_ex"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/et_valor_carteira"
        android:id="@+id/tv_valor_carteira" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/et_valor_carteira"
        android:hint="R$ 0,00" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_concliur"
        android:id="@+id/bt_concluir"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:onClick="concluirNovaCarteira" />
</LinearLayout>
